# napari-hide-layer-test

./: LICENSE  README.md  mkdocs.yml  setup.cfg  tox.ini
docs/: index.md
src/napari_hide_layer_test/: napari.yaml
src/napari_hide_layer_test/_tests/: test_dock_widget.py
