[metadata]
name = napari-hide-layer-test
version = 0.0.1
author = Karol Gotkowski
author_email = KarolGotkowski@dkfz-heidelberg.de
url = https://github.com/Karol-G/napari-hide-layer-test
license = BSD-3-Clause
description = To show a bug
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/Karol-G/napari-hide-layer-test/issues
    Documentation = https://github.com/Karol-G/napari-hide-layer-test#README.md
    Source Code = https://github.com/Karol-G/napari-hide-layer-test
    User Support = https://github.com/Karol-G/napari-hide-layer-test/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
napari-hide-layer-test = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-hide-layer-test = napari_hide_layer_test:napari.yaml
